--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -194,6 +194,7 @@
     padding: 4px;
     border-radius: 4px;
     box-shadow: 10px 10px 10px rgb(154, 154, 154);
+    margin-bottom: 24px;
 }
 
 .image-mssv {
@@ -339,4 +340,15 @@
     height: 32px;
     width: 100%;
     margin: 6px 0;
+}
+
+#input-file {
+    display: none;
+}
+
+#change-image-btn {
+    color: white;
+    background: #0794e0;
+    padding: 6px;
+    border-radius: 6px;
 }
